@startuml design

class Program
{
    -_continueProgram : bool
    -_points : Points
    -_goals : Goals
    -_menuOptions : List<string>
    ClearConsole() : void
    DisplayPoints() : void
    ListMenu() : void
    ChooseOption() : void
    CreateNewGoal() : void
    ListGoals() : void
    SaveGoals() : void
    LoadGoals() : void
    RecordEvent() : void
    Quit() : void
}

class Points
{
    -_amount : int
    +Points()
    +AddPoints() : void
    +GetPoints() : int
}

class Goals
{
    -_goals : List<Goal>
    -_goalTypes : List<string>
    +Goals()
    +CreateGoal() : void
    -ListGoalTypes() : void
    -GetNewName() : string
    -GetNewDescription() : string
    -GetNewAmount() : int
    +ListGoals() : void
    +LoadGoals() : void
    -SetGoal() : void
    +RecordEvent(in goalNumber : int) : int
    -GoalIsCompleted(in goalIndex : int) : bool
    -MarkGoalCompleted(in goalIndex : int) : void
    -GetPoints(in goalIndex : int) : int
}

class File
{
    -_fileName : string
    -_goalsInFile : List<string>
    +File(in fileName : string)
    -GetFile() : string
    -FileFound() : bool
    -SetGoals() : void
    +GetGoals() : List<Goal>
    +WriteToFile(in goals : List<Goal>) : void
}

abstract Goal
{
    -_name : string
    -_description : string
    -_points : int
    -_isCompleted : bool
    +Goal(in name : string, in description : string, in points : int, in isComplete : bool)
    -SetName(in name : string) : void
    -SetDescription(in description : string) : void
    -SetPoints(in points : int) : void
    -SetIsCompleted(in isCompleted : bool) : void
    +Display() virtual : string
    -GetCompletionBox() : string
    -IsCompleted() : bool
    -GetName() : string
    -GetDescription() : string
    -GetCompleted() : string
    +MarkAsComplete() virtual : void
    +GetPoints() : int
    +GetSimplified() abstract : string
}

class SimpleGoal
{
    -_goalType : string
    +SimpleGoal(in name : string, in description : string, in points : int, in isComplete : bool)
    +GetSimplified() override : string
    -GetGoalType() : string
}

class EternalGoal
{
    -_goalType : string
    +EternalGoal(in name : string, in description : string, in points : int)
    +MarkAsComplete() override : void
    +GetSimplified() override : string
    -GetGoalType() : string
}

class ChecklistGoal
{
    -_amountToComplete : int
    -_amountAccomplished : int
    -_bonusPoints : int
    +ChecklistGoal(in name : string, in description : string, in points : int, in amountToComplete : int, in bonusPoints : int)
    +override GetPoints() : int
    -GetBonusPoints() : int
}

Program <-- Points
Program <-- Goals
Goals <-- Goal
Goals <-- File
Goal <|-- SimpleGoal
Goal <|-- ChecklistGoal
Goal <|-- EternalGoal

@enduml